beboplang/src/BebopLangParser.py
# Generated from grammar/BebopLang.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class BebopLangParser ( Parser ):

    grammarFileName = "BebopLang.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'iniciar'", "'misi\\u00F3n'", "';'", 
                     "'asignar'", "'='", "'rastrear'", "'capturar'", "'abandonar'", 
                     "'terminar'", "'if'", "'('", "')'", "'{'", "'}'", "'else'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "COMPARADOR", "ID", "NUMERO", "CADENA", "WS", "COMENTARIO" ]

    RULE_programa = 0
    RULE_instruccion = 1
    RULE_iniciar = 2
    RULE_asignacion = 3
    RULE_rastreo = 4
    RULE_captura = 5
    RULE_abandono = 6
    RULE_fin = 7
    RULE_decision = 8
    RULE_condicion = 9

    ruleNames =  [ "programa", "instruccion", "iniciar", "asignacion", "rastreo", 
                   "captura", "abandono", "fin", "decision", "condicion" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    COMPARADOR=16
    ID=17
    NUMERO=18
    CADENA=19
    WS=20
    COMENTARIO=21

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramaContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def instruccion(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BebopLangParser.InstruccionContext)
            else:
                return self.getTypedRuleContext(BebopLangParser.InstruccionContext,i)


        def getRuleIndex(self):
            return BebopLangParser.RULE_programa

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPrograma" ):
                listener.enterPrograma(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPrograma" ):
                listener.exitPrograma(self)




    def programa(self):

        localctx = BebopLangParser.ProgramaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_programa)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 21 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 20
                self.instruccion()
                self.state = 23 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & 2002) != 0)):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class InstruccionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def iniciar(self):
            return self.getTypedRuleContext(BebopLangParser.IniciarContext,0)


        def asignacion(self):
            return self.getTypedRuleContext(BebopLangParser.AsignacionContext,0)


        def rastreo(self):
            return self.getTypedRuleContext(BebopLangParser.RastreoContext,0)


        def captura(self):
            return self.getTypedRuleContext(BebopLangParser.CapturaContext,0)


        def abandono(self):
            return self.getTypedRuleContext(BebopLangParser.AbandonoContext,0)


        def decision(self):
            return self.getTypedRuleContext(BebopLangParser.DecisionContext,0)


        def fin(self):
            return self.getTypedRuleContext(BebopLangParser.FinContext,0)


        def getRuleIndex(self):
            return BebopLangParser.RULE_instruccion

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInstruccion" ):
                listener.enterInstruccion(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInstruccion" ):
                listener.exitInstruccion(self)




    def instruccion(self):

        localctx = BebopLangParser.InstruccionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_instruccion)
        try:
            self.state = 32
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [1]:
                self.enterOuterAlt(localctx, 1)
                self.state = 25
                self.iniciar()
                pass
            elif token in [4]:
                self.enterOuterAlt(localctx, 2)
                self.state = 26
                self.asignacion()
                pass
            elif token in [6]:
                self.enterOuterAlt(localctx, 3)
                self.state = 27
                self.rastreo()
                pass
            elif token in [7]:
                self.enterOuterAlt(localctx, 4)
                self.state = 28
                self.captura()
                pass
            elif token in [8]:
                self.enterOuterAlt(localctx, 5)
                self.state = 29
                self.abandono()
                pass
            elif token in [10]:
                self.enterOuterAlt(localctx, 6)
                self.state = 30
                self.decision()
                pass
            elif token in [9]:
                self.enterOuterAlt(localctx, 7)
                self.state = 31
                self.fin()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IniciarContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return BebopLangParser.RULE_iniciar

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIniciar" ):
                listener.enterIniciar(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIniciar" ):
                listener.exitIniciar(self)




    def iniciar(self):

        localctx = BebopLangParser.IniciarContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_iniciar)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 34
            self.match(BebopLangParser.T__0)
            self.state = 35
            self.match(BebopLangParser.T__1)
            self.state = 36
            self.match(BebopLangParser.T__2)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AsignacionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(BebopLangParser.ID, 0)

        def CADENA(self):
            return self.getToken(BebopLangParser.CADENA, 0)

        def getRuleIndex(self):
            return BebopLangParser.RULE_asignacion

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAsignacion" ):
                listener.enterAsignacion(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAsignacion" ):
                listener.exitAsignacion(self)




    def asignacion(self):

        localctx = BebopLangParser.AsignacionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_asignacion)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 38
            self.match(BebopLangParser.T__3)
            self.state = 39
            self.match(BebopLangParser.ID)
            self.state = 40
            self.match(BebopLangParser.T__4)
            self.state = 41
            self.match(BebopLangParser.CADENA)
            self.state = 42
            self.match(BebopLangParser.T__2)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class RastreoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(BebopLangParser.ID, 0)

        def getRuleIndex(self):
            return BebopLangParser.RULE_rastreo

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRastreo" ):
                listener.enterRastreo(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRastreo" ):
                listener.exitRastreo(self)




    def rastreo(self):

        localctx = BebopLangParser.RastreoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_rastreo)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 44
            self.match(BebopLangParser.T__5)
            self.state = 45
            self.match(BebopLangParser.ID)
            self.state = 46
            self.match(BebopLangParser.T__2)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CapturaContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(BebopLangParser.ID, 0)

        def getRuleIndex(self):
            return BebopLangParser.RULE_captura

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCaptura" ):
                listener.enterCaptura(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCaptura" ):
                listener.exitCaptura(self)




    def captura(self):

        localctx = BebopLangParser.CapturaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_captura)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 48
            self.match(BebopLangParser.T__6)
            self.state = 49
            self.match(BebopLangParser.ID)
            self.state = 50
            self.match(BebopLangParser.T__2)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AbandonoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return BebopLangParser.RULE_abandono

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAbandono" ):
                listener.enterAbandono(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAbandono" ):
                listener.exitAbandono(self)




    def abandono(self):

        localctx = BebopLangParser.AbandonoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_abandono)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 52
            self.match(BebopLangParser.T__7)
            self.state = 53
            self.match(BebopLangParser.T__1)
            self.state = 54
            self.match(BebopLangParser.T__2)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FinContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return BebopLangParser.RULE_fin

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFin" ):
                listener.enterFin(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFin" ):
                listener.exitFin(self)




    def fin(self):

        localctx = BebopLangParser.FinContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_fin)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 56
            self.match(BebopLangParser.T__8)
            self.state = 57
            self.match(BebopLangParser.T__1)
            self.state = 58
            self.match(BebopLangParser.T__2)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DecisionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def condicion(self):
            return self.getTypedRuleContext(BebopLangParser.CondicionContext,0)


        def instruccion(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BebopLangParser.InstruccionContext)
            else:
                return self.getTypedRuleContext(BebopLangParser.InstruccionContext,i)


        def getRuleIndex(self):
            return BebopLangParser.RULE_decision

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDecision" ):
                listener.enterDecision(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDecision" ):
                listener.exitDecision(self)




    def decision(self):

        localctx = BebopLangParser.DecisionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_decision)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 60
            self.match(BebopLangParser.T__9)
            self.state = 61
            self.match(BebopLangParser.T__10)
            self.state = 62
            self.condicion()
            self.state = 63
            self.match(BebopLangParser.T__11)
            self.state = 64
            self.match(BebopLangParser.T__12)
            self.state = 68
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 2002) != 0):
                self.state = 65
                self.instruccion()
                self.state = 70
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 71
            self.match(BebopLangParser.T__13)
            self.state = 81
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==15:
                self.state = 72
                self.match(BebopLangParser.T__14)
                self.state = 73
                self.match(BebopLangParser.T__12)
                self.state = 77
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while (((_la) & ~0x3f) == 0 and ((1 << _la) & 2002) != 0):
                    self.state = 74
                    self.instruccion()
                    self.state = 79
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 80
                self.match(BebopLangParser.T__13)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CondicionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(BebopLangParser.ID, 0)

        def COMPARADOR(self):
            return self.getToken(BebopLangParser.COMPARADOR, 0)

        def NUMERO(self):
            return self.getToken(BebopLangParser.NUMERO, 0)

        def getRuleIndex(self):
            return BebopLangParser.RULE_condicion

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCondicion" ):
                listener.enterCondicion(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCondicion" ):
                listener.exitCondicion(self)




    def condicion(self):

        localctx = BebopLangParser.CondicionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_condicion)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 83
            self.match(BebopLangParser.ID)
            self.state = 84
            self.match(BebopLangParser.COMPARADOR)
            self.state = 85
            self.match(BebopLangParser.NUMERO)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx





